[project]
name = "oi-runner"
version = "0.1.0"
dependencies = [
    "fastapi==0.110.2",
    "uvicorn==0.27.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["oi_runner.py"]
